--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@sveltejs/adapter-netlify": "^4.1.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "sass": "^1.71.0",
     "svelte": "^4.2.10",
     "vite": "^5.1.0"
   }
